--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     Hello there, awesome person! 
       <h1>Simiel</h1>
 <img src="https://avatars.githubusercontent.com/u/87607921?v=4">
+<ol> <li> Simielxx.me </li> <ol>
 
+</body>
 
 </html>
