--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     Hello there, awesome person! 
       <h1>Simiel</h1>
+      <ul> <li> Simiel.com </li> </ul>
 <img src="https://avatars.githubusercontent.com/u/87607921?v=4">
 
 
