--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
       <ul> <li> Simiel.com </li> </ul>
 <img src="https://avatars.githubusercontent.com/u/87607921?v=4">
 
-
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 </html>
